<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_launcher_name">File Manager</string>
    <string name="press_back_again">Press back again to exit</string>
    <string name="go_to_home_folder">Go to home folder</string>
    <string name="set_as_home_folder">Set as home folder</string>
    <string name="home_folder_updated">Home folder updated</string>
    <string name="copy_path">Copy path to clipboard</string>
    <string name="path_copied">Path copied</string>
    <string name="select_audio_file">Please select an audio file</string>
    <string name="search_folder">Search folder</string>
    <string name="rooted_device_only">This operation works only on rooted devices</string>
    <string name="recents">Recents</string>
    <string name="show_recents">Show recents</string>
    <string name="invert_colors">Invert colors</string>

    <!-- Open as -->
    <string name="open_as">Open as</string>
    <string name="text_file">Text file</string>
    <string name="image_file">Image file</string>
    <string name="audio_file">Audio file</string>
    <string name="video_file">Video file</string>
    <string name="other_file">Other file</string>

    <!-- Compression -->
    <string name="compress">Compress</string>
    <string name="decompress">Decompress</string>
    <string name="compress_as">Compress as</string>
    <string name="compressing">Compressing…</string>
    <string name="decompressing">Decompressing…</string>
    <string name="compression_successful">Compression successful</string>
    <string name="decompression_successful">Decompression successful</string>
    <string name="compressing_failed">Compressing failed</string>
    <string name="decompressing_failed">Decompressing failed</string>

    <!-- Favorites -->
    <string name="manage_favorites">Manage favorites</string>
    <string name="go_to_favorite">Go to favorite</string>
    <string name="favorites_activity_placeholder">You can add frequently used folders to favorites for easy access from anywhere.</string>

    <!-- File Editor -->
    <string name="file_editor">File Editor</string>

    <!-- Storage analysis -->
    <string name="storage_analysis">Storage analysis</string>
    <string name="images">Images</string>
    <string name="videos">Videos</string>
    <string name="audio">Audio</string>
    <string name="documents">Documents</string>
    <string name="downloads">Downloads</string>
    <string name="archives">Archives</string>
    <string name="others">Others</string>
    <string name="storage_free">free</string>
    <string name="total_storage">Total storage: %s</string>
    <string name="cloud">Cloud Connection</string>

    <!-- Settings -->
    <string name="enable_root_access">Enable root access</string>
    <string name="press_back_twice">Require pressing Back twice to leave the app</string>
    <!--
        Haven't found some strings? There's more at
        https://github.com/FossifyOrg/Commons/tree/master/commons/src/main/res
    -->

    <!-- Cloud -->
    <string name="cloud_connection">Cloud Connection</string>
    <string name="add_connection">Add Connection</string>
    <string name="no_connection">No connections found</string>
    <!-- Cloud Connection Dialog-->
    <string name="select_option">Select Option</string>
    <string name="select_protocol">Select Protocol</string>
    <string name="authentication">Authentication</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="private_key">Private Key</string>
    <string name="password_private_key">Password Private Key</string>
    <string name="display_name">Display Name</string>
    <string name="shared_path">Shared path</string>
    <string name="no_certificate_attached">No certificate attached</string>
    <string name="attach_certificate">Attach certificate</string>
    <!-- Item Network Connection -->
    <string name="host_address">Host: 192.168.1.1</string>
    <string name="smb">SMB</string>

    <!-- Connection Ports -->
    <string name="port_smb">445</string>
    <string name="port_ftp">21</string>
    <string name="port_sftp">22</string>
    <string name="port_webdav_http">80</string>
    <string name="port_webdav_https">443</string>

    <string name="host_name_error">Host name cannot be empty</string>
    <string name="user_name_error">User name cannot be empty</string>
    <string name="password_error">Password cannot be empty</string>
    <string name="port_error">Port cannot be empty</string>
    <string name="display_name_error">Display name cannot be empty</string>
    <string name="shared_path_error">Shared path cannot be empty</string>
    <string name="private_key_error">Private key cannot be empty</string>
    <string name="private_key_pass_error">Private key password cannot be empty</string>


</resources>
