<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="12dp"
    app:cardCornerRadius="12dp"
    app:cardElevation="6dp"
    app:cardBackgroundColor="?attr/colorSurface">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            android:paddingEnd="88dp">

            <TextView
                android:id="@+id/tvDisplayName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/display_name"
                android:textAppearance="?attr/textAppearanceHeadline6"/>

            <TextView
                android:id="@+id/tvHost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/host_address"/>

            <TextView
                android:id="@+id/tvType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/smb"
                android:layout_marginTop="2dp"
                android:textStyle="italic"/>

            <TextView
                android:id="@+id/tvSharedPath"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/shared_path"
                android:layout_marginTop="2dp"/>

        </LinearLayout>

        <ImageButton
            android:id="@+id/btnEdit"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_gravity="top|end"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="52dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="Edit"
            android:padding="4dp"
            app:srcCompat="@drawable/ic_edit_vector"
            />

        <ImageButton
            android:id="@+id/btnDelete"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_gravity="top|end"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="Delete"
            android:padding="4dp"
            app:srcCompat="@drawable/ic_delete_vector"
            />

    </FrameLayout>

</com.google.android.material.card.MaterialCardView>
