<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <org.fossify.commons.views.MyAppBarLayout
        android:id="@+id/cloud_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/cloud_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/color_primary"
            app:title="@string/cloud_connection"
            app:titleTextAppearance="@style/AppTheme.ActionBar.TitleTextStyle"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/add_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_connection"
            app:icon="@drawable/ic_plus_vector"
            app:iconGravity="textStart"
            android:layout_margin="8dp"/>

    </org.fossify.commons.views.MyAppBarLayout>

    <RelativeLayout
        android:id="@+id/connection_wrapper"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <org.fossify.commons.views.MyRecyclerView
            android:id="@+id/connections_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:paddingTop="@dimen/small_margin"
            android:scrollbars="none"
            app:layoutManager="org.fossify.commons.views.MyLinearLayoutManager" />

        <TextView
            android:id="@+id/empty_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/no_connection"
            android:textAppearance="?android:textAppearanceMedium"
            android:visibility="gone" />

        <ProgressBar
            android:id="@+id/loader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone" />

    </RelativeLayout>



</androidx.coordinatorlayout.widget.CoordinatorLayout>
